--- a/boards/shields/skree/skree_right.conf
+++ b/boards/shields/skree/skree_right.conf
@@ -7,6 +7,7 @@ CONFIG_ZMK_EXT_POWER=n
 
 # zmk mouse emulation for trackball/trackpad
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_KEYMAP=y
 
 # encoder support
 CONFIG_EC11=n
