--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,4 +4,7 @@ on:
   - workflow_dispatch
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.2
+
+
+
