--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,8 @@
 ---
 include:
-  - board: lemon_wireless
+  - board: cosmos_lemon_wireless
     shield: skree_left
     snippet: zmk-usb-logging;studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  - board: lemon_wireless
+  - board: cosmos_lemon_wireless
     shield: skree_right vik_pmw3610
