--- a/build.yaml
+++ b/build.yaml
@@ -5,4 +5,4 @@ include:
     snippet: zmk-usb-logging;studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: cosmos_lemon_wireless
-    shield: skree_right vik_pmw3610
+    shield: skree_right 
