--- a/config/deps.yml
+++ b/config/deps.yml
@@ -2,8 +2,10 @@ manifest:
   remotes:
     - name: sadekbaroudi
       url-base: https://github.com/sadekbaroudi
+    - name: rianadon
+      url-base: https://github.com/rianadon
   projects:
     - name: zmk-fingerpunch-vik
-      remote: sadekbaroudi
+      remote: rianadon
       revision: main
       import: config/deps.yml
