--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,4 @@ on:
   - workflow_dispatch
 jobs:
   build:
-    uses: rianadon/zmk/.github/workflows/build-user-config.yml@prepare-command
-
-
-
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
