--- a/boards/shields/skree/skree_right.conf
+++ b/boards/shields/skree/skree_right.conf
@@ -2,6 +2,7 @@ CONFIG_SPI=y
 
 # RGB underglow configuration
 CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 
 # zmk mouse emulation for trackball/trackpad
@@ -10,4 +11,3 @@ CONFIG_ZMK_POINTING=y
 # encoder support
 CONFIG_EC11=n
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
-CONFIG_ZMK_STUDIO_LOCKING=n
