--- a/build.yaml
+++ b/build.yaml
@@ -2,7 +2,7 @@
 include:
   - board: cosmos_lemon_wireless
     shield: skree_left
+  - board: cosmos_lemon_wireless
+    shield: skree_right vik_pmw3610
     snippet: zmk-usb-logging;studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  - board: cosmos_lemon_wireless
-    shield: skree_right 
