--- a/build.yaml
+++ b/build.yaml
@@ -6,3 +6,5 @@ include:
     shield: skree_right vik_pmw3610
     snippet: zmk-usb-logging;studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: cosmos_lemon_wireless
+    shield: settings_reset
