--- a/boards/shields/skree/skree_left.conf
+++ b/boards/shields/skree/skree_left.conf
@@ -6,7 +6,7 @@ CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 
 # zmk mouse emulation for trackball/trackpad
-CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING=n
 
 # encoder support
 CONFIG_EC11=n
