--- a/boards/shields/rickball/rickball.zmk.yml
+++ b/boards/shields/rickball/rickball.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
-id: skree
-name: skree
+id: rickball
+name: rickball
 type: shield
 url: https://github.com/rianadon/Cosmos-Keyboards
 features:
@@ -9,5 +9,5 @@ features:
   - encoder
   - studio
 siblings:
-  - skree_left
-  - skree_right
+  - rickball_left
+  - rickball_right
