--- a/boards/shields/rickball/rickball_left.conf
+++ b/boards/shields/rickball/rickball_left.conf
@@ -6,11 +6,8 @@ CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_EXT_POWER=n
 
 # zmk mouse emulation for trackball/trackpad
-CONFIG_ZMK_POINTING=n
+CONFIG_ZMK_POINTING=y
 
 # encoder support
-CONFIG_EC11=n
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
-
-# ZMK Studio auto-unlock
-CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
