--- a/build.yaml
+++ b/build.yaml
@@ -1,10 +1,8 @@
 ---
 include:
   - board: cosmos_lemon_wireless
-    shield: skree_left
+    shield: rickball_left
   - board: cosmos_lemon_wireless
-    shield: skree_right vik_pmw3610
+    shield: rickball_right vik_pmw3610
     snippet: zmk-usb-logging;studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-  - board: cosmos_lemon_wireless
-    shield: settings_reset
