--- a/boards/shields/rickball/rickball_left.conf
+++ b/boards/shields/rickball/rickball_left.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_POINTING=y
 # encoder support
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# ZMK Studio - disable locking
+CONFIG_ZMK_STUDIO_LOCKING=n
